--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -1,16 +1,6 @@
-.thing-form {
-    margin: 20px 0;
-}
-
-#banner {
-    border-bottom: none;
-    margin-top: -20px;
-}
-
-#banner h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+td {
+  text-align: center;
+  border: 1px solid;
 }
 
 .hero-unit {
