get accepted and enrolled users

--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -8,7 +8,7 @@ table
     td
       h3 Cohorts
   tr(ng-repeat='cohortTag in cohortTags')
-    td {{cohortTag.name}}
+    td {{cohortTag.display_name}}
     td {{cohortTag.total_count}}
 
 table
