add loading animation, refactor totalStageTags function

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -4,6 +4,11 @@ td, th {
   padding: 0 5px;
 }
 
+.loader {
+  text-align: center;
+  width: 100%;
+}
+
 .hero-unit {
     position: relative;
     padding: 30px 15px;
