--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -1,7 +1,11 @@
 div(ng-include='"components/navbar/navbar.html"')
 
-h2 Total Users: {{totalUsers}}
+.loader(ng-if='loading')
+  h2 Analyzing Data...
+  img(src='assets/images/loading.gif')
+  h2 Analyzing Data...
 
+h2 Total Users: {{totalUsers}}
 
 table
   tr
@@ -14,6 +18,9 @@ table
     td {{cohortTag.total_count}}
     td {{cohortTag.acceptedCount}}
     td {{cohortTag.enrolledCount}}
+
+br
+br
 
 table
   thead
@@ -29,13 +36,6 @@ table
     td {{stageTag.overall_count}}
     td(ng-if="stageTag.stageConversionRate") {{stageTag.stageConversionRate}}%
     td(ng-if="stageTag.overallConversionRate") {{stageTag.overallConversionRate}}%
-
-  tr
-    td
-      h3 Stages
-  tr(ng-repeat='stageTag in totaledStageTags')
-    td {{stageTag.name}}
-    td {{stageTag.total_count}}
 
 h3 All Tags
 table.table-striped
